refactor: Sonar cleanup, part 2 (#179)